--- a/src/Components/Pages/Cart Container/CartContainer.css
+++ b/src/Components/Pages/Cart Container/CartContainer.css
@@ -90,8 +90,12 @@
 .item-img{
     height: 100px;
     width: 100px;
-    border:  1px solid black;
+    border:  1px solid gray;
+    overflow: hidden;
     
+}
+.item-img img{
+    width: 100%;
 }
 
 .item-price, .item-total{
@@ -114,7 +118,7 @@
     justify-content: center;
     cursor: pointer;
     background-color: rgb(224, 89, 89);
-    border-radius: 50%;
+    border-radius: 3px;
     transition: all 0.1s ease-in;
     color: #fff;
 }
